hphp/hack/test/typecheck/lsb_protected_disallow_direct.php.exp
File "lsb_protected_disallow_direct.php", line 9, characters 15-16:
Cannot access this protected property, you don't extend A (Typing[4112])
  File "lsb_protected_disallow_direct.php", line 4, characters 30-35:
  This property is protected
